readded leogillet.com

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
         <div class="overview-name"><a class="overview-link" href="https://gitlab.com/LeoGillet/dotfiles">dotfiles</a>
         </div>
         <div class="overview-description">My dotfiles - includes sway, zsh & alacritty configs</div>
+
+        <div class="overview-name"><a class="overview-link"
+            href="https://gitlab.com/LeoGillet/leogillet.com">leogillet.com</a>
+        </div>
+        <div class="overview-description italic">this</div>
       </div>
 
       <br>
